Added WebConfig, DTOs, mappers, specifications, and updated services and tests