@@ -5,6 +5,7 @@ import com.hospital.hospitalapi.entity.Appointment;
 import com.hospital.hospitalapi.entity.Doctor;
 import com.hospital.hospitalapi.entity.Patient;
 import com.hospital.hospitalapi.exception.ResourceNotFoundException;
+import com.hospital.hospitalapi.mapper.AppointmentMapper;
 import com.hospital.hospitalapi.repository.AppointmentRepository;
 import com.hospital.hospitalapi.repository.DoctorRepository;
 import com.hospital.hospitalapi.repository.PatientRepository;
@@ -20,6 +21,7 @@ public class AppointmentService {
     private final AppointmentRepository appointmentRepository;
     private final PatientRepository patientRepository;
     private final DoctorRepository doctorRepository;
+    private final AppointmentMapper appointmentMapper;
 
   //  createAppointment
     public AppointmentDTO createAppointment(AppointmentDTO dto){
@@ -35,13 +37,12 @@ public class AppointmentService {
                 .appTime(dto.getAppTime())
                 .reason(dto.getReason())
                 .docNotes(dto.getDocNotes())
-                .appStatus(Appointment.AppointmentStatus.valueOf(dto.getAppStatus()))
+                .appStatus(dto.getAppStatus())
                 .doctor(doctor)
                 .patient(patient)
                 .build();
 
-        Appointment saved = appointmentRepository.save(appointment);
-        return mapToDTO(saved);
+       return appointmentMapper.toDTO(appointmentRepository.save(appointment));
     }
 
     // getAllAppointments
@@ -49,15 +50,15 @@ public class AppointmentService {
     public List<AppointmentDTO> getAllAppointments(){
         return appointmentRepository.findAll()
                 .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(appointmentMapper::toDTO)
+                .toList();
     }
 
     // getAppointmentById....
     public AppointmentDTO getAppointmentById(Long id){
         Appointment appointment = appointmentRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Appointment with: " + id + " not found"));
-        return mapToDTO(appointment);
+        return appointmentMapper.toDTO(appointment);
     }
     // updateAppointment
     public AppointmentDTO updateAppointment(Long id, AppointmentDTO dto){
@@ -72,12 +73,10 @@ public class AppointmentService {
         appointment.setAppTime(dto.getAppTime());
         appointment.setReason(dto.getReason());
         appointment.setDocNotes(dto.getDocNotes());
-        appointment.setAppStatus(Appointment.AppointmentStatus.valueOf(dto.getAppStatus()));
+        appointment.setAppStatus(dto.getAppStatus());
         appointment.setDoctor(doctor);
 
-        Appointment saved = appointmentRepository.save(appointment);
-
-        return mapToDTO(saved);
+        return appointmentMapper.toDTO(appointmentRepository.save(appointment));
     }
 
     // cancelAppointment
@@ -86,8 +85,7 @@ public class AppointmentService {
                 .orElseThrow(() -> new ResourceNotFoundException("Appointment with: " + id + " not found"));
         appointment.setAppStatus(Appointment.AppointmentStatus.CANCELLED);
 
-        Appointment saved = appointmentRepository.save(appointment);
-        return mapToDTO(saved);
+        return appointmentMapper.toDTO(appointmentRepository.save(appointment));
 
     }
     // getAppointmentsByDoctor... find doc by id
@@ -98,8 +96,8 @@ public class AppointmentService {
         // list of appointments
         List<Appointment> appointments = appointmentRepository.findByDoctor(doctor);
         return appointments.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(appointmentMapper::toDTO)
+                .toList();
     }
 //    getAppointmentsByPatient
     public List<AppointmentDTO> getAppointmentsByPatient(Long id){
@@ -108,26 +106,10 @@ public class AppointmentService {
 
         List<Appointment> appointments = appointmentRepository.findByPatient(patient);
         return  appointments.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(appointmentMapper::toDTO)
+                .toList();
     }
 
-    // Helper fun
-    private AppointmentDTO mapToDTO(Appointment appointment){
-        return AppointmentDTO.builder()
-                .id(appointment.getId())
-                .appDate(appointment.getAppDate())
-                .appTime(appointment.getAppTime())
-                .reason(appointment.getReason())
-                .docNotes(appointment.getDocNotes())
-                .appStatus(appointment.getAppStatus().name())
-                .doctorId(appointment.getDoctor().getId())
-                .patientId(appointment.getPatient().getId())
-                .doctorName(appointment.getDoctor().getFirstName() + " " + appointment.getDoctor().getLastName())
-                .patientName(appointment.getPatient().getFirstName() + " " + appointment.getPatient().getLastName())
-                .build();
-
-    }
 
 
 }
